fix(packages/app): links in ls output have low contrast
Fixes #2582

--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -3056,7 +3056,7 @@ sidecar .custom-content .log-field pre > code {
   color: var(--color-support-01);
 }
 .dir-listing-is-link {
-  color: var(--color-brand-03);
+  color: var(--color-base0E);
 }
 
 body {
